@@ -4,13 +4,14 @@ package org.openlca.app.wizards.io;
 import java.io.File;
 import java.util.Arrays;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import org.eclipse.swt.SWT;
+import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Combo;
 import org.eclipse.swt.widgets.Composite;
 import org.openlca.app.components.FileChooser;
+import org.openlca.app.db.Database;
 import org.openlca.app.util.Controls;
 import org.openlca.app.util.ErrorReporter;
 import org.openlca.app.util.UI;
@@ -18,26 +19,32 @@ import org.openlca.core.database.IDatabase;
 import org.openlca.core.database.MappingFileDao;
 import org.openlca.core.io.maps.FlowMap;
 
-class MappingFileCombo {
+class MappingSelector {
 
 	private final IDatabase db;
-	private final Combo combo;
-	private Consumer<FlowMap> listener;
+	private final Consumer<FlowMap> handler;
 
-	private MappingFileCombo(Composite parent, IDatabase db) {
-		this.db = db;
-		var comp = new Composite(parent, SWT.NONE);
-		UI.gridData(comp, true, false);
-		UI.gridLayout(comp, 2, 5, 0);
+	private MappingSelector(IDatabase db, Consumer<FlowMap> handler) {
+		this.db	 = db;
+		this.handler = handler;
+	}
+
+	static MappingSelector on(Consumer<FlowMap> handler) {
+		return new MappingSelector(Database.get(), handler);
+	}
+
+	void render(Composite comp) {
+		UI.label(comp, "Flow mapping");
 
 		// initialize the combo box
-		combo = new Combo(comp, SWT.READ_ONLY);
-		UI.gridData(combo, true, false);
+		var combo = new Combo(comp, SWT.READ_ONLY);
+		UI.fillHorizontal(combo);
+		UI.fillHorizontal(comp);
 		var dbFiles = new MappingFileDao(db)
-			.getNames()
-			.stream()
-			.sorted()
-			.collect(Collectors.toList());
+				.getNames()
+				.stream()
+				.sorted()
+				.toList();
 		var items = new String[dbFiles.size() + 1];
 		items[0] = "";
 		for (int i = 0; i < dbFiles.size(); i++) {
@@ -45,11 +52,12 @@ class MappingFileCombo {
 		}
 		combo.setItems(items);
 		combo.select(0);
-		Controls.onSelect(combo, $ -> onItemSelected());
+		Controls.onSelect(combo, $ -> onItemSelected(combo));
 
 		// add the file button
 		var fileBtn = new Button(comp, SWT.NONE);
 		fileBtn.setText("From file");
+		fileBtn.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, false, false));
 		Controls.onSelect(fileBtn, e -> {
 			var file = FileChooser.open("*.csv");
 			if (file == null)
@@ -60,27 +68,19 @@ class MappingFileCombo {
 			nextItems[idx] = file.getAbsolutePath();
 			combo.setItems(nextItems);
 			combo.select(idx); // does not fire an event
-			onItemSelected();
+			onItemSelected(combo);
 		});
 
 	}
 
-	static MappingFileCombo create(Composite parent, IDatabase db) {
-		return new MappingFileCombo(parent, db);
-	}
-
-	void onSelected(Consumer<FlowMap> listener) {
-		this.listener = listener;
-	}
-
-	private void onItemSelected() {
-		if (listener == null)
+	private void onItemSelected(Combo combo) {
+		if (handler == null)
 			return;
 		int idx = combo.getSelectionIndex();
 
 		// none
 		if (idx == 0) {
-			listener.accept(null);
+			handler.accept(null);
 			return;
 		}
 
@@ -90,17 +90,17 @@ class MappingFileCombo {
 			// db mapping
 			var dbMap = new MappingFileDao(db).getForName(mapping);
 			if (dbMap != null) {
-				listener.accept(FlowMap.of(dbMap));
+				handler.accept(FlowMap.of(dbMap));
 				return;
 			}
 
 			// file mapping
 			var file = new File(mapping);
 			if (file.exists()) {
-				listener.accept(FlowMap.fromCsv(file));
+				handler.accept(FlowMap.fromCsv(file));
 			}
 
-		}catch (Exception e) {
+		} catch (Exception e) {
 			ErrorReporter.on("Failed to open mapping: " + mapping, e);
 		}
 	}
